Made a few different fixes` 1. Body font to a variable and update chat to contain 2. also fix input container font-size 3. Loading page on mobile width fix 4. Size of profile page name if tex t width is small

--- a/botornot/imports/ui/All.less
+++ b/botornot/imports/ui/All.less
@@ -6,6 +6,7 @@
 @bg-1: #000;
 @bg-2: #FFF;
 @logo-fg: #0070e0;
+@body-font: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 body {
     font-family: 'League Spartan Bold', arial;
 }
