--- a/botornot/imports/ui/components/NavBar.less
+++ b/botornot/imports/ui/components/NavBar.less
@@ -86,7 +86,7 @@ ul.nav.navbar-nav.navbar-right{
 	}
 }
 .form-control:focus {
-    border-color: #66afe9;
+    border-color: @fg;
     outline: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
